<resources>
    <string name="app_name">Phisical</string>
    <string name="title_toolbar">เลือกศึกษาข้อมูล</string>
    <string name="title_toolbar_video">เลือกวีดิโอ</string>
    <string name="name_title_phone">ปรึกษาแพทย์</string>
    <string name="hospital_name">โรงพยาบาลตากสินมหาราช</string>
    <string name="doctor">แพทย์และผู้เชี่ยวชาญในการกายภาพบำบัด</string>
    <string name="callphone">094-628-8393</string>
    <string name="title_list_phisical">สร้างผู้ป่วย</string>
    <string name="title_phisical">แนะนำท่ากายภาพบำบัด</string>
    <string name="title_save_phisical">บันทึกประวัติการกายภาพ</string>
    <string name="title_present">รายงานประวัติการกายภาพบำบัด</string>

    <string name="physical_type">ประเภทอัมพาต</string>
    <string name="pt1">อัมพาตครึ่งซีก</string>
    <string name="pt2">อัมพาตครึ่งท่อน</string>
    <string name="pt3">อัมพาตทั้งตัว</string>

    <string name="adl">ความสามารถในการช่วยเหลือตัวเอง</string>

    <string name="a">ปุ่มการแนะนำท่ากายภาพบำบัดที่เหมาะสมกับอาการอัมพาตที่เป็นอยู่</string>
    <string name="b">ปุ่มข้อมูล มีไว้ศึกษาความรู้เบื้องต้นในการจัดท่าของอัมพาต และความรู้ในการดูแลผู้สูงอายุในแต่ละด้าน</string>
    <string name="c">ปุ่มปรึกษาแพทย์ สามารถโทรไปปรึกษาหรือขอคำแนะนำและข้อมูลเพิ่มเติมได้</string>


    <string name="educate_a">1. ผู้ป่วยอัมพาตครึ่งซีก </string>
    <string name="educate_aa">ผู้ป่วยที่มีภาวะอ่อนแรงจากการขาดเลือดไปเลี้ยงสมองหรือไปเลี้ยงสมองไม่พอ
                จากการแตก/ตีบตันของหลอดเลือด หรืออุบัติเหตุที่กระทบกระเทือนทางสมอง</string>
    <string name="educate_b">2. ผู้ป่วยอัมพาตครึ่งท่อน</string>
    <string name="educate_bb">ผู้ป่วยที่มีภาวะอ่อนแรงของขาข้างเดียวหรือทั้งสองข้าง ซึ่งมีสาเหตุมาจากอาการบาดเจ็บของไขสันหลังตั้งแต่ระดับอกลงมาจากการตกที่สูง
                อุบัติเหตุท้องถนนหรือถูกยิง แทง หรือมีเนื้องอกที่ไขสันหลัง เป็นต้น</string>
    <string name="educate_c">3. ผู้ป่วยอัมพาตทั้งตัว</string>
    <string name="educate_cc">ผู้ป่วยที่มีอาการอ่อนแรงของแขน ขาทั้งสองข้าง สาเหตุเดียวกับอัมพาตครึ่งท่อนแต่ระดับจะสูงกว่า คือเป็นระดับคอลงมา</string>


    <!--form-->



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
