<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Physical Type-->
            <TextView
                android:textStyle="bold"
                android:textSize="22dp"
                android:text="@string/physical_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <RadioGroup
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="@string/pt1"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:text="@string/pt2"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:text="@string/pt3"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RadioGroup>

            <TextView
                android:text="@string/adl"
                android:textSize="22dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>

    </ScrollView>

    <Button
        android:text="บันทึก"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>