<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhisicalActivity">

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:background="#DCDCDC"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconlist" />

        <TextView
            android:textColor="@color/blak"
            android:textSize="20dp"
            android:text="@string/title_list_phisical"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:background="#DCDCDC"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconlist" />

        <TextView
            android:textColor="@color/blak"
            android:textSize="20dp"
            android:text="@string/title_phisical"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:background="#DCDCDC"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconlist" />

        <TextView
            android:textColor="@color/blak"
            android:textSize="20dp"
            android:text="@string/title_save_phisical"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="350dp"
        android:orientation="horizontal"
        android:background="#DCDCDC"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconlist" />

        <TextView
            android:textColor="@color/blak"
            android:textSize="20dp"
            android:text="@string/title_present"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>